Set sections generic

--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <h1>portfolio placeholder</h1>
+    <header>
+        <section class="side">
+            <p>Header Placeholder</p>
+            
+        </section>
+    </header>
+    <main>
+        <section class="side">
+            <p>Main Placeholder</p>
+            
+        </section>
+    </main>
+    <footer>
+        <section class="side">
+            <p>Footer Placeholder</p>
+
+        </section>
+    </footer>
 </body>
 </html>
