Header (ex-menu) done

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
                     КОНТАКТЫ
                 </p>
             </div>
-            <p>
-                Разрабатываю имиджевые сайты для малого и среднего бизнеса, которые повышают престиж компании и позволяют выделиться на фоне конкурентов
+            
+            <p class="header-mid">
+                    Разрабатываю имиджевые сайты для малого и среднего бизнеса, которые повышают престиж компании и позволяют выделиться на фоне конкурентов
             </p>
-            <h1>
+            <h1 class="header-bottom">
                 Привет, я Саша — фронтенд разарботчик и дизайнер сайтов
             </h1>
         </section>
