PP services and steck sections

--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
         <h2>
             Самые свежие проекты
         </h2>
-        <div class="realhome">
+        <div style="background-image: url('../resources/realhome.jpg');">
             <div class="project-text">
                 <h3>Realhome</h3>
                 <p>дизайн,верстка, настройка</p>
             </div>
         </div>
-        <div class="glass">
+        <div style="background-image: url('../resources/glass.jpg');">
             <div class="project-text">
                 <h3>GLASS</h3>
                 <p>разработка интерфейса</p>
             </div>
         </div>
-        <div class="fesiyen">
+        <div style="background-image: url('../resources/fesiyen.jpg');">
             <div class="project-text">
                 <h3>Fesiyen</h3>
                 <p>разработка интерфейса</p>
