background-image: url('resources/realhome.jpg')

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h2>
             Самые свежие проекты
         </h2>
-        <div style="background-image: url('../resources/realhome.jpg');">
+        <div style="background-image: url('resources/realhome.jpg');">
             <div class="project-text">
                 <h3>Realhome</h3>
                 <p>дизайн,верстка, настройка</p>
