update links in projects

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                 <p>дизайн,верстка, настройка</p>
             </div>
         </div>
-        <div style="background-image: url('../resources/glass.jpg');">
+        <div style="background-image: url('resources/glass.jpg');">
             <div class="project-text">
                 <h3>GLASS</h3>
                 <p>разработка интерфейса</p>
             </div>
         </div>
-        <div style="background-image: url('../resources/fesiyen.jpg');">
+        <div style="background-image: url('resources/fesiyen.jpg');">
             <div class="project-text">
                 <h3>Fesiyen</h3>
                 <p>разработка интерфейса</p>
