--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
 </head>
 <body>
 <header>
-
-
-    <!-- TEST  -->
     <section>
         <div class="header-menu">
             <p>
@@ -95,7 +92,7 @@
     
     <section id="services">
         <h2>
-            Помогаю реализовать широкий спектр задач
+            Помогаю реализовать <br> широкий спектр задач
         </h2>
         
         <h3>
