Done narrow Contacts and Footer

--- a/index.html
+++ b/index.html
@@ -138,20 +138,25 @@
             </div>
         </div>
     </section>
+    <section id="contacts">
+        <div>
+            <h2>для связи:</h2>
+            <ul>
+                <li>
+                    <a href="https://www.instagram.com/">instagram</a>
+                </li>
+                    <a href="https://web.telegram.org/">telegram</a>
+                </li>
+                    <a href="mailto:sasha@orlov.net">mail</a>
+                </li>
+            </ul>
+        </div>
+    </section>
 </main>
 <footer>
     <section>
-        <p>
-            для связи:
-            instagram
-            telegram
-            mail
-        </p>
-    
-        <p>
-            Портфолио фротнтенд-разработчика Саши Орлова
-            Все права защищены. 2023
-        </p>
+        <h3>Портфолио фротнтенд-разработчика Саши Орлова</h3>
+        <p>Все права защищены. 2023</p>
     </section>
 </footer>
 </body>
