--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <body>
 <header>
     <section>
-        <div class="header-menu">
-            <p>
-                ORLOV
-                портфолио
-                компетенции
-                УСЛУГИ
-                КОНТАКТЫ
-            </p>
+        <div class="header-top">
+            <button>ORLOV</button>
+            <div class="menu">
+                <a href="#projects">портфолио</a>
+                <a href="#stack">компетенции</a>
+                <a href="#services">УСЛУГИ</a>
+                <a href="#contacts">КОНТАКТЫ</a>
+            </div>
         </div>
         <p class="header-mid">
                 Разрабатываю имиджевые сайты для малого и среднего бизнеса, которые повышают престиж компании и позволяют выделиться на фоне конкурентов
