Fix contacts and footer bugs

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 </main>
 <footer>
     <section>
-        <h3>Портфолио фротнтенд-разработчика Саши Орлова</h3>
+        <h3>Портфолио фронтенд-разработчика Саши Орлова</h3>
         <p>Все права защищены. 2023</p>
     </section>
 </footer>
