simple header - remove position relative

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 
-    <title>портфолио</title>
+    <title>ORLOV Portfolio</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,12 +27,14 @@
                 <a href="#contacts">КОНТАКТЫ</a>
             </div>
         </div>
-        <p class="header-mid">
-                Разрабатываю имиджевые сайты для малого и среднего бизнеса, которые повышают престиж компании и позволяют выделиться на фоне конкурентов
-        </p>
-        <h1 class="header-bottom">
-            Привет, я Саша — фронтенд разработчик и дизайнер сайтов
-        </h1>
+        <div class="header-txt">
+            <p>
+                    Разрабатываю имиджевые сайты для малого и среднего бизнеса, которые повышают престиж компании и позволяют выделиться на фоне конкурентов
+            </p>
+            <h1>
+                Привет, я Саша — фронтенд разработчик и дизайнер сайтов
+            </h1>
+        </div>
     </section>
 </header>
 <main>
