replace menu button with link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <header>
     <section>
         <div class="header-top">
-            <button>ORLOV</button>
+            <div class="logo">
+                <a href="/">ORLOV</a>
+            </div>
             <div class="menu">
                 <a href="#projects">портфолио</a>
                 <a href="#stack">компетенции</a>
