--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section>
         <div class="header-top">
             <div class="logo">
-                <a href="/">ORLOV</a>
+                <a href="index.html">ORLOV</a>
             </div>
             <div class="menu">
                 <a href="#projects">портфолио</a>
